--- a/views/home.pug
+++ b/views/home.pug
@@ -3,6 +3,7 @@ include mixins/videoBlock
 block content
     each item in videos
         +videoBlock({
+            id:item.id,
             title: item.title,
             views: item.views,
             videoFile: item.videoFile,
