--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,8 +2,8 @@ doctype html
 html   
     head  
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.7.2/css/all.css", integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr", crossorigin="anonymous")
-        
         title #{pageTitle} | #{siteName}
+        link(rel="stylesheet", href="/static/styles.css")
     body
         include ../partials/header
         header
@@ -11,3 +11,4 @@ html
         main
             block content
         include ../partials/footer
+        script(src="/static/main.js")
