--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,21 +1,22 @@
 header.header
-    .header__column
+   .header__wrapper 
+    .header__column 
         a(href=routes.home)
-         i.fab.fa-youtube
+            i.fab.fa-youtube
     .header__column
         form(action=routes.search, method="get")
-            input(type="text", placeholder="Search by term..", name="term")
+            input(type="text", placeholder="Search by term...", name="term")
     .header__column
-        ul 
+        ul
             if !user.isAuthenticated
-                li 
+                li
                     a(href=routes.join) Join
-                li 
+                li
                     a(href=routes.login) Log In
-            else   
-                li 
+            else
+                li
                     a(href=`/videos${routes.upload}`) Upload
-                li 
+                li
                     a(href=routes.userDetail(user.id)) Profile
-                li 
-                    a(href=routes.logout) Log out
+                li
+                    a(href=routes.logout) Log Out    
