--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
-    .footer___icon
+    .footer__icon
         i.fab.fa-youtube
     span.footer__text #{siteName} &copy; #{new Date().getFullYear()}
