--- a/views/home.pug
+++ b/views/home.pug
@@ -1,11 +1,121 @@
 extends layouts/main
 include mixins/videoBlock
+
 block content
-    each item in videos
-        +videoBlock({
+    .home-videos
+        each item in videos
+            +videoBlock({
             id:item.id,
             title: item.title,
             views: item.views,
-            videoFile: item.fileUrl,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
+            +videoBlock({
+            id:item.id,
+            title: item.title,
+            views: item.views,
+            videoFile: item.fileUrl
+            })
             
-        })
