--- a/assets/scss/partials/header.scss
+++ b/assets/scss/partials/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: $red;
+  background-color: $pink;
   margin-bottom: 50px;
   .header__wrapper {
     padding: 5px 0px;
@@ -39,6 +39,7 @@
           font-size: 14px;
           color: $black;
           font-weight: 600;
+          max-width: none;
           &::placeholder {
             font-weight: 300;
             color: rgba(0, 0, 0, 0.7);
