--- a/assets/scss/partials/socialLogin.scss
+++ b/assets/scss/partials/socialLogin.scss
@@ -5,6 +5,7 @@
   width: 100%;
   button {
     width: 100%;
+    height: 37px;
     max-width: 320px;
     display: flex;
     justify-content: center;
