--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,5 +1,6 @@
 .social-login   
     button.social-login--github
+        a(href=routes.github)
         span 
             i.fab.fa-github
         |  Continue with Github
