--- a/assets/scss/config/utils.scss
+++ b/assets/scss/config/utils.scss
@@ -1,5 +1,5 @@
 .u-avatar {
-  //height: 80px;
-  background-color: $red;
-  //??border-radius: 50%;
+  height: 80px;
+  background-color: red;
+  border-radius: 50%;
 }
